--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1383,7 +1383,7 @@ Granularities},
    year      =  2013
  }
 
-@Manual{@R-patchwork,
+@Manual{R-patchwork,
     title = {patchwork: The Composer of Plots},
     author = {Thomas Lin Pedersen},
     year = {2020},
@@ -1391,6 +1391,48 @@ Granularities},
     url = {https://CRAN.R-project.org/package=patchwork},
   }
 
+
+
+@ARTICLE{Bogner2012-az,
+   title     = "Technical Note: The normal quantile transformation and its
+                application in a flood forecasting system",
+   author    = "Bogner, K and Pappenberger, F and Cloke, H L",
+   abstract  = "Abstract. The Normal Quantile Transform (NQT) has been used in
+                many hydrological and meteorological applications in order to
+                make the Cumulated Distribution Function (CDF) of the observed,
+                simulated and forecast river discharge, water level or
+                precipitation data Gaussian. It is also the heart of the
+                meta-Gaussian model for assessing the total predictive
+                uncertainty of the Hydrological Uncertainty Processor (HUP)
+                developed by Krzysztofowicz. In the field of geo-statistics this
+                transformation is better known as the Normal-Score Transform. In
+                this paper some possible problems caused by small sample sizes
+                when applying the NQT in flood forecasting systems will be
+                discussed and a novel way to solve the problem will be outlined
+                by combining extreme value analysis and non-parametric
+                regression methods. The method will be illustrated by examples
+                of hydrological stream-flow forecasts.",
+   journal   = "Hydrol. Earth Syst. Sci.",
+   publisher = "Copernicus GmbH",
+   volume    =  16,
+   number    =  4,
+   pages     = "1085--1094",
+   month     =  apr,
+   year      =  2012,
+   copyright = "https://creativecommons.org/licenses/by/3.0/",
+   language  = "en"
+ }
+ 
+@ARTICLE{JSD,
+  author={J. {Lin}},
+  journal={IEEE Transactions on Information Theory}, 
+  title={Divergence measures based on the Shannon entropy}, 
+  year={1991},
+  volume={37},
+  number={1},
+  pages={145-151},
+  doi={10.1109/18.61115}}
+ 
 #### 
 
 
